<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="applicationLabel" tools:ignore="UnusedResources">Phone</string>
  <string name="callHistoryIconLabel" tools:ignore="UnusedResources">Call history</string>
  <string name="action_copy_number_text">Copy number</string>
  <string name="action_edit_number_before_call">Edit number before call</string>
  <string name="call_log_delete_all">Clear call history</string>
  <string name="call_log_trash_voicemail">Delete voicemail</string>
  <string name="snackbar_voicemail_deleted">Voicemail deleted</string>
  <string name="clearCallLogConfirmation_title">Clear call history?</string>
  <string name="clearCallLogConfirmation">This will delete all calls from your history</string>
  <string name="clearCallLogProgress_title">Clearing call history\u2026</string>
  <string name="notification_missedCallTitle">Missed call</string>
  <string name="notification_missedWorkCallTitle">Missed work call</string>
  <string name="notification_missedCallsTitle">Missed calls</string>
  <string name="notification_missedCallsMsg"><xliff:g id="num_missed_calls">%d</xliff:g> missed calls</string>
  <string name="notification_missedCall_call_back">Call back</string>
  <string name="notification_missedCall_message">Message</string>
  <string name="handle_restricted" translatable="false">RESTRICTED</string>
  <string name="post_call_notification_message"><xliff:g id="name">%1$s</xliff:g>: <xliff:g id="message">%2$s</xliff:g></string>
  <string name="notification_voicemail_text_format">Dial <xliff:g id="voicemail_number">%s</xliff:g></string>
  <string name="notification_voicemail_no_vm_number">Voicemail number unknown</string>
  <plurals name="notification_voicemail_title">
    <item quantity="one">Voicemail</item>
    <item quantity="other">
            <xliff:g id="count">%1$d</xliff:g>
            Voicemails
        </item>
  </plurals>
  <string name="notification_voicemail_callers_list"><xliff:g id="newer_callers">%1$s</xliff:g>,
        <xliff:g id="older_caller">%2$s</xliff:g>
    </string>
  <string name="notification_new_voicemail_ticker">New voicemail from
        <xliff:g id="caller">%1$s</xliff:g>
    </string>
  <string name="voicemail_playback_error">Couldn\'t play voicemail</string>
  <string name="voicemail_fetching_content">Loading voicemail\u2026</string>
  <string name="voicemail_fetching_timout">Couldn\'t load voicemail</string>
  <string name="call_log_item_count_and_date">(<xliff:g id="count">%1$d</xliff:g>)
        <xliff:g id="date">%2$s</xliff:g>
    </string>
  <string name="description_playback_speakerphone">Switch on or off speakerphone</string>
  <string name="description_playback_seek">Seek playback position</string>
  <string name="action_menu_call_history_description">Call history</string>
  <string msgid="2295659037509008453" name="action_menu_overflow_description">More options</string>
  <string name="dialer_settings_label">Settings</string>
  <string name="description_entering_bulk_action_mode">Entering bulk action mode</string>
  <string name="description_leaving_bulk_action_mode">Left bulk action mode</string>
  <string name="description_selecting_bulk_action_mode">Selected <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_unselecting_bulk_action_mode">Unselected <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_contact_details">Contact details for <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_spam_contact_details">Contact details for suspected spam caller <xliff:g id="nameOrNumber">%1$s</xliff:g></string>
  <string name="description_num_calls"><xliff:g id="numberOfCalls">%1$s</xliff:g> calls.</string>
  <string name="description_video_call">Video call.</string>
  <string name="description_start_voice_search">Start voice search</string>
  <string name="voicemail">Voicemail</string>
  <string name="voicemailMultiSelectDeleteConfirm">Delete</string>
  <string name="voicemailMultiSelectDeleteCancel">Cancel</string>
  <string name="voicemailMultiSelectActionBarTitle"><xliff:g id="number">%1$s</xliff:g> selected</string>
  <plurals name="delete_voicemails_confirmation_dialog_title">
    <item quantity="one"><b>Delete this voicemail? </b></item>
    <item quantity="other"><b>Delete these voicemails? </b></item>
  </plurals>
  <string name="voicemailCallLogToday">@string/call_log_header_today</string>
  <string name="voicemailCallLogDateTimeFormat"><xliff:g example="Jul 25, 2014" id="date">%1$s</xliff:g> at <xliff:g example="2:49 PM" id="time">%2$s</xliff:g></string>
  <string name="voicemailDurationFormat"><xliff:g example="10" id="minutes">%1$02d</xliff:g>:<xliff:g example="20" id="seconds">%2$02d</xliff:g></string>
  <string name="voicemailCallLogDateTimeFormatWithDuration"><xliff:g example="Jul 25, 2014 at 2:49PM" id="dateAndTime">%1$s</xliff:g> \u2022 <xliff:g example="01:22" id="duration">%2$s</xliff:g></string>
  <string name="voice_search_not_available">Voice search not available</string>
  <string name="dialer_hint_find_contact">Search contacts</string>
  <string name="call_log_all_empty">Your call history is empty</string>
  <string name="call_log_all_empty_action">Make a call</string>
  <string name="call_log_missed_empty">You have no missed calls.</string>
  <string name="call_log_voicemail_empty">Your voicemail inbox is empty.</string>
  <string name="call_log_activity_title" tools:ignore="UnusedResources">Call History</string>
  <string name="call_log_all_title">All</string>
  <string name="call_log_missed_title">Missed</string>
  <string name="tab_all_contacts">Contacts</string>
  <string name="search_shortcut_create_new_contact">Create new contact</string>
  <string name="search_shortcut_add_to_contact">Add to a contact</string>
  <string name="search_shortcut_send_sms_message">Send SMS</string>
  <string name="search_shortcut_make_video_call">Make video call</string>
  <string name="select_all">Select all</string>
  <string name="call_log_action_video_call">Video call</string>
  <string name="call_log_action_send_message">Send a message</string>
  <string name="call_log_action_details">Call details</string>
  <string name="call_log_action_share_voicemail">Send to &#8230;</string>
  <string name="call_log_action_call">
        Call <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="description_incoming_missed_call">Missed call from <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>, <xliff:g example="Mobile" id="typeOrLocation">^2</xliff:g>, <xliff:g example="2 min ago" id="timeOfCall">^3</xliff:g>, <xliff:g example="on SIM 1" id="phoneAccount">^4</xliff:g>.</string>
  <string name="description_incoming_answered_call">Answered call from <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>, <xliff:g example="Mobile" id="typeOrLocation">^2</xliff:g>, <xliff:g example="2 min ago" id="timeOfCall">^3</xliff:g>, <xliff:g example="on SIM 1" id="phoneAccount">^4</xliff:g>.</string>
  <string name="description_unread_voicemail">Unread voicemail from <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>, <xliff:g example="Mobile" id="typeOrLocation">^2</xliff:g>, <xliff:g example="2 min ago" id="timeOfCall">^3</xliff:g>, <xliff:g example="on SIM 1" id="phoneAccount">^4</xliff:g>.</string>
  <string name="description_read_voicemail">Voicemail from <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>, <xliff:g example="Mobile" id="typeOrLocation">^2</xliff:g>, <xliff:g example="2 min ago" id="timeOfCall">^3</xliff:g>, <xliff:g example="on SIM 1" id="phoneAccount">^4</xliff:g>.</string>
  <string name="description_outgoing_call">Call to <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>, <xliff:g example="Mobile" id="typeOrLocation">^2</xliff:g>, <xliff:g example="2 min ago" id="timeOfCall">^3</xliff:g>, <xliff:g example="on SIM 1" id="phoneAccount">^4</xliff:g>.</string>
  <string name="call_log_via_number">via <xliff:g example="(555) 555-5555" id="number">%1$s</xliff:g></string>
  <string name="call_log_via_number_phone_account"><xliff:g example="SIM 1" id="phoneAccount">%1$s</xliff:g> via <xliff:g example="(555) 555-5555" id="number">%2$s</xliff:g></string>
  <string name="description_call_action">
        Call <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="description_video_call_action">
        Video call <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>.
    </string>
  <string name="description_voicemail_action">
        Listen to voicemail from <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="description_create_new_contact_action">
        Create contact for <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="description_add_to_existing_contact_action">
        Add <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g> to existing contact
    </string>
  <string name="description_details_action">
        Call details for <xliff:g example="John Smith" id="nameOrNumber">^1</xliff:g>
    </string>
  <string name="call_log_header_today">Today</string>
  <string name="call_log_header_yesterday">Yesterday</string>
  <string name="call_log_header_other">Older</string>
  <string name="voicemail_speaker_on">Turn speaker on.</string>
  <string name="voicemail_speaker_off">Turn speaker off.</string>
  <string name="voicemail_play_start_pause">Start or pause playback.</string>
  <string name="display_options_title">Display options</string>
  <string name="sounds_and_vibration_title">Sounds and vibration</string>
  <string name="accessibility_settings_title">Accessibility</string>
  <string name="ringtone_title">Phone ringtone</string>
  <string name="vibrate_on_ring_title">"Also vibrate for calls</string>
  <string name="dtmf_tone_enable_title">Keypad tones</string>
  <string name="dtmf_tone_length_title">Keypad tone length</string>
  <string-array name="dtmf_tone_length_entries">
    <item>Normal</item>
    <item>Long</item>
  </string-array>
  <string-array name="dtmf_tone_length_entry_values" translatable="false">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string name="respond_via_sms_setting_title">Quick responses</string>
  <string name="call_settings_label">Calls</string>
  <string name="manage_blocked_numbers_label">Blocked numbers</string>
  <string name="voicemail_settings_label">Voicemail</string>
  <string name="phone_account_settings_label">Calling accounts</string>
  <string name="ringtone_preference_key" translatable="false">button_ringtone_key</string>
  <string name="vibrate_on_preference_key" translatable="false">button_vibrate_on_ring</string>
  <string name="antispam_category_title">Number marking</string>
  <string name="antispam_enabled_title">Number marking</string>
  <string name="antispam_enabled_summary">Mark incoming calls from the MIUI yellow-page database and block selected categories</string>
  <string name="antispam_icon_title">Show category icons</string>
  <string name="antispam_icon_summary">Display an icon for the marked call type on the incoming call screen</string>
  <string name="antispam_block_category_title">Block categories</string>
  <string name="antispam_block_high_risk">High risk (fraud)</string>
  <string name="antispam_block_high_risk_summary">Suspected fraud / scam calls</string>
  <string name="antispam_block_realestate">Real estate</string>
  <string name="antispam_block_ads">Ads / telemarketing</string>
  <string name="antispam_block_delivery">Delivery</string>
  <string name="antispam_block_loan">Loan offers</string>
  <string name="antispam_block_education">Education / training</string>
  <string name="antispam_block_repair">Home repair</string>
  <string name="antispam_block_insurance">Insurance / finance</string>
</resources>