<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2026 LibreLab Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/antispam_category_title">

        <SwitchPreferenceCompat
            android:key="antispam_enabled"
            android:title="@string/antispam_enabled_title"
            android:summary="@string/antispam_enabled_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="antispam_icon"
            android:title="@string/antispam_icon_title"
            android:summary="@string/antispam_icon_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/antispam_block_category_title">

        <SwitchPreferenceCompat
            android:key="antispam_block_1"
            android:title="@string/antispam_block_high_risk"
            android:summary="@string/antispam_block_high_risk_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="antispam_block_2"
            android:title="@string/antispam_block_realestate"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_3"
            android:title="@string/antispam_block_ads"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_5"
            android:title="@string/antispam_block_delivery"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_6"
            android:title="@string/antispam_block_loan"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_13"
            android:title="@string/antispam_block_education"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_14"
            android:title="@string/antispam_block_repair"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="antispam_block_21"
            android:title="@string/antispam_block_insurance"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
